--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Move Windows binaries
         if: matrix.os == 'windows-latest'
         run: |
-          mv zlib/build/bin/Release/*.dll zlib/build/
+          mv zlib/build/Release/*.dll zlib/build/
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4.3.4
