Add custom icon to NuGet package metadata
Enhanced the NuGet package by specifying `icon.png` as the package icon.
- Added `<PackageIcon>` element in `Hexa.NET.ZLib.csproj` to reference `icon.png`.
- Included `icon.png` in the `<ItemGroup>` to ensure it is packed and placed in the root of the NuGet package.

These changes improve the package's visual identity in NuGet package managers.

--- a/Hexa.NET.ZLib/Hexa.NET.ZLib.csproj
+++ b/Hexa.NET.ZLib/Hexa.NET.ZLib.csproj
@@ -24,6 +24,7 @@
 		<RepositoryType>git</RepositoryType>
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageIcon>icon.png</PackageIcon>
 
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);1591</NoWarn>
@@ -95,6 +96,7 @@
 	<ItemGroup>
 		<Content Include="../LICENSE.txt" Pack="true" PackagePath="\" />
 		<Content Include="../README.md" Pack="true" PackagePath="\" />
+		<Content Include="../icon.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 </Project>
