--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,5 +28,5 @@ jobs:
       lib-name: "zlib"
       lib-version: "v1.3.1"
       pr-branch: zlib-artifacts-branch
-      pr-base-branch: master
+      pr-base-branch: main
       pr-reviewers: JunaMeinhold
